# cjm-fasthtml-tailwind

./: .gitignore  README.md  cli_implementation_brief.md  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
builders/: colors.html  colors.html.md  scales.html  scales.html.md
cjm_fasthtml_tailwind/: _modidx.py
cli/: cli_config.html  cli_config.html.md  core_utils_discovery.html  core_utils_discovery.html.md  display.html  display.html.md  dynamic_examples.html  dynamic_examples.html.md  example_discovery.html  example_discovery.html.md  explorer.html  explorer.html.md  factory_extraction.html  factory_extraction.html.md  helper_discovery.html  helper_discovery.html.md  imports.html  imports.html.md  pattern_scanner.html  pattern_scanner.html.md  search.html  search.html.md  test_code.html  test_code.html.md  utils.html  utils.html.md
core/: base.html  base.html.md  resources.html  resources.html.md  testing.html  testing.html.md
nbs/: index.ipynb  nbdev.yml  sidebar.yml
scripts/: compare_implementation.py  extract_tailwind_classes-2025-07-23_20-18-02.py  extract_tailwind_classes.py  extract_tailwind_concepts.py  extract_truncated_tables.py  fix_export_directives.py  replace_practical_examples.py
utilities/: accessibility.html  accessibility.html.md  backgrounds.html  backgrounds.html.md  borders.html  borders.html.md  effects.html  effects.html.md  filters.html  filters.html.md  flexbox_and_grid.html  flexbox_and_grid.html.md  interactivity.html  interactivity.html.md  layout.html  layout.html.md  sizing.html  sizing.html.md  (+12 more)
(+104 files in other folders)
