[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-tailwind"
dynamic = ["version"]
description = "Python-native Tailwind CSS v4 utility builder providing dynamic class generation with full abstraction for FastHTML projects."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'python-fasthtml', 'execnb', 'ipython']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-tailwind"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-tailwind"

[project.entry-points.nbdev]
cjm_fasthtml_tailwind = "cjm_fasthtml_tailwind._modidx:d"


[project.scripts]
cjm-tailwind-explore = "cjm_fasthtml_tailwind.cli.explorer:main"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_tailwind.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_tailwind"]

[tool.nbdev]
